k8s_loesungen/9_kustomize/overlays/prod/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
spec:
  template:
    spec:
      containers:
      - name: demo-container
