k8s_loesungen/9_kustomize/overlays/prod/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: prod.k8s-schulung.cloud.viadee.de
      http:
        paths:
          - backend:
              serviceName: demo-app
              servicePort: 80
